--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
 asgiref==3.3.4
+boto3==1.17.111
+botocore==1.20.111
 Django==3.2.4
+django-storages==1.11.1
+jmespath==0.10.0
 Pillow==8.2.0
+pkg-resources==0.0.0
 psycopg2==2.9.1
+python-dateutil==2.8.2
 python-decouple==3.4
 pytz==2021.1
+s3transfer==0.4.2
+six==1.16.0
 sqlparse==0.4.1
+urllib3==1.26.6
